--- a/courses-1.ipynb
+++ b/courses-1.ipynb
@@ -13,7 +13,10 @@
     "\n",
     "to comit \n",
     "git add \n",
-    "git comit"
+    "git comit\n",
+    "\n",
+    "\n",
+    "regarder le .gitignore\n"
    ]
   }
  ],
